list all groups with pr, sorted by pr creation

--- a/config/syslab-reviewer.sample.yml
+++ b/config/syslab-reviewer.sample.yml
@@ -1,2 +1,14 @@
 github:
   token: your_token
+
+courses:
+  bsys:
+    name: BSYS
+    organization: htwg-syslab-bsys
+    repo_regex: bsys-(ss|ws)\d{2}-grp\d+
+    repo_homework: bsys-(ss|ws)\d{2}-homework
+  syso:
+    name: SYSO
+    organization: htwg-syslab-syso
+    repo_regex: syso-(ss|ws)\d{2}-grp\d+
+    repo_homework: syso-(ss|ws)\d{2}-homework
